only image is left

--- a/src/content/outdoor-wifi/H4.md
+++ b/src/content/outdoor-wifi/H4.md
@@ -25,7 +25,7 @@ specification:
   lens: "2.8 mm, viewing angle:106° (Horizontal), 122° (Diagonal) 4 mm, viewing angle:86° (Horizontal), 102° (Diagonal) 6 mm, viewing angle:52° (Horizontal), 62° (Diagonal)."
   weight: "229 g"
   ip_range: "IP67"
-  resolution:
+  resolution: "2304 × 1296"
   storage: "MicroSD card storage (up to 512 GB)"
 
 price: "Contact Sales"
