--- a/src/content/indoor-wifi/C6.md
+++ b/src/content/indoor-wifi/C6.md
@@ -1,22 +1,22 @@
 ---
 title: "C6"
 description: "2K⁺ Smart Home Camera"
-image: "/images/wifi/BC1-B1.png"
+image: "/images/indoor-wifi/C6.png"
 images:
-  - url: "/images/wifi/BC1-B1.png"
+  - url: "/images/indoor-wifi/C6.png"
     caption: "Front view"
 
 features:
-  - "2K+ Quad HD Resolution (2560 × 1440) for ultra-clear video monitoring"
-  - "1/3\" Progressive Scan CMOS Sensor ensures sharp and detailed imaging"
-  - "4mm Lens with 92° Diagonal, 79° Horizontal, and 42° Vertical viewing angles"
-  - "Pan & Tilt Function: 353° Pan and 133° Tilt for full-room coverage"
-  - "IR Night Vision up to 10 meters for round-the-clock security"
-  - "3D DNR, WDR (80dB), and BLC for enhanced low-light performance and balanced image exposure"
-  - "AI-Powered Smart Alerts including Human, Pet, Voice Activity & Waving-Hand Detection"
-  - "Supports Customizable Alert Zones for precise motion detection"
-  - "Two-Way Talk with dual-mic and high-power speaker for clear communication"
-  - "H.265/H.264 Video Compression for efficient streaming and storage usage"
+  - "2K+ Quad HD Resolution (2560 × 1440) for ultra-clear video monitoring."
+  - "1/3\" Progressive Scan CMOS Sensor ensures sharp and detailed imaging."
+  - "4mm Lens with 92° Diagonal, 79° Horizontal, and 42° Vertical viewing angles."
+  - "Pan & Tilt Function: 353° Pan and 133° Tilt for full-room coverage."
+  - "IR Night Vision up to 10 meters for round-the-clock security."
+  - "3D DNR, WDR (80dB), and BLC for enhanced low-light performance and balanced image exposure."
+  - "AI-Powered Smart Alerts including Human, Pet, Voice Activity & Waving-Hand Detection."
+  - "Supports Customizable Alert Zones for precise motion detection."
+  - "Two-Way Talk with dual-mic and high-power speaker for clear communication."
+  - "H.265/H.264 Video Compression for efficient streaming and storage usage."
 
 specification:
   model: "CS-C6-A0-8C4WF"
