--- a/src/content/outdoor-wifi/H4.md
+++ b/src/content/outdoor-wifi/H4.md
@@ -1,21 +1,21 @@
 ---
 title: "H4"
 description: "A simple yet solid security solution."
-image: "/images/wifi/BC1-B1.png"
+image: "/images/outdoor-wifi/H4.png"
 images:
-  - url: "/images/wifi/BC1-B1.png"
+  - url: "/images/outdoor-wifi/H4.png"
     caption: "Front view"
 features:
-  - "3MP Quad HD resolution (2304 × 1296) for enhanced video clarity"
-  - "Wide 109° horizontal field of view with a 2.8 mm lens"
-  - "Colorful daytime video and black-and-white night vision up to 30 meters (98 ft.)"
-  - "Smart H.265 / H.264 video compression with adaptive bit rate for efficient storage"
-  - "Digital WDR and 3D DNR for clear image quality in various lighting conditions"
-  - "Supports MicroSD card storage up to 256GB"
-  - "Wi-Fi (2.4GHz) and Ethernet connectivity with AP pairing for easy setup"
-  - "User-defined alarm tones and real-time motion alerts"
-  - "Weatherproof IP67 rating for reliable outdoor use"
-  - "Compact and durable design with low power consumption (Max. 6W)"
+  - "3MP Quad HD resolution (2304 × 1296) for enhanced video clarity."
+  - "Wide 109° horizontal field of view with a 2.8 mm lens."
+  - "Colorful daytime video and black-and-white night vision up to 30 meters (98 ft.)."
+  - "Smart H.265 / H.264 video compression with adaptive bit rate for efficient storage."
+  - "Digital WDR and 3D DNR for clear image quality in various lighting conditions."
+  - "Supports MicroSD card storage up to 256GB."
+  - "Wi-Fi (2.4GHz) and Ethernet connectivity with AP pairing for easy setup."
+  - "User-defined alarm tones and real-time motion alerts."
+  - "Weatherproof IP67 rating for reliable outdoor use."
+  - "Compact and durable design with low power consumption (Max. 6W)."
 
 
 
