only seo and transition is left

--- a/src/content/outdoor-wifi/H4.md
+++ b/src/content/outdoor-wifi/H4.md
@@ -1,6 +1,6 @@
 ---
 title: "H4"
-description: "A simple yet solid security solution."
+description: "A simple yet solid cyber defense security solution."
 image: "/images/outdoor-wifi/H4.png"
 images:
   - url: "/images/outdoor-wifi/H4.png"
