--- a/src/content/smarthomeappliances/RS20.md
+++ b/src/content/smarthomeappliances/RS20.md
@@ -2,9 +2,9 @@
 slug: RS20 Pro
 title: "RS20 Pro"
 description: "A new example of hands-free automated cleaning"
-image: "/images/wifi-free/BC1-B1.png"
+image: "/images/smarthome/RS20 Pro.png"
 images:
-  - url: "/images/wifi-free/BC1-B1.png"
+  - url: "/images/smarthome/RS20 Pro.png"
     caption: "Front view"
 
 features:
