--- a/src/content/smarthomeappliances/T31.md
+++ b/src/content/smarthomeappliances/T31.md
@@ -2,9 +2,9 @@
 slug: T31
 title: "T31"
 description: "Remotely operate devices"
-image: "/images/wifi-free/BC1-B1.png"
+image: "/images/smarthome/T31.png"
 images:
-  - url: "/images/wifi-free/BC1-B1.png"
+  - url: "/images/smarthome/T31.png"
     caption: "Front view"
 
 features:
