--- a/src/content/smarthomeappliances/RS20.md
+++ b/src/content/smarthomeappliances/RS20.md
@@ -1,7 +1,7 @@
 ---
 slug: RS20 Pro
 title: "RS20 Pro"
-description: "A new example of hands-free automated cleaning"
+description: "New example hands-free cleaning"
 image: "/images/smarthome/RS20 Pro.png"
 images:
   - url: "/images/smarthome/RS20 Pro.png"
